basic logistic regression completed some refactoring needed tho

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# my addition
+notepad.txt
+
+# everything is auto generated below
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
